# SamplingLCD

./: CMakeLists.txt  CMakePresets.json  Dockerfile.linux  Manifest.toml  Project.toml  README.md
.github/workflows/: build-deploy.yml  build-linux-artifacts.yml  build-windows-artifacts.yml  release.yml
cmake/: InstallGSL.cmake  InstallGTestAndBenchmark.cmake  InstallVcpkg.cmake
lib/: CMakeLists.txt
lib/dirac_to_dirac/: dirac_to_dirac_approx_function_i.h  dirac_to_dirac_approx_short_function.cpp  dirac_to_dirac_approx_short_function.h
lib/dirac_to_dirac/wrappers/: dirac_to_dirac_approx_short_c.h  dirac_to_dirac_approx_short_function_c.h  dirac_to_dirac_approx_short_thread_c.h
lib/gm_to_dirac/wrappers/: gm_to_dirac_short_c.h  gm_to_dirac_short_standard_normal_deviation_c.h
src/: CMakeLists.txt  main.cpp
wrappers/julia/: CMakeLists.txt  julia_approximation_options.cpp  julia_dirac_to_dirac.cpp  julia_gm_to_dirac.cpp  run_approximation.jl
wrappers/julia/LCDApproximationJulia/: .gitignore  Project.toml
wrappers/julia/LCDApproximationJulia/src/: LCDApproximationJulia.jl
